fix : text responsive on mobile view

--- a/src/components/ReferralDashboardTable/ReferralDashboard.module.scss
+++ b/src/components/ReferralDashboardTable/ReferralDashboard.module.scss
@@ -201,3 +201,9 @@
         padding: 10px 30px;
     }
 }
+
+.mainHeading {
+    @include devices(mobile) {
+        font-size: 25px;
+    }
+}
